WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233264
Web Inspector: fix IPC race between unregistering an extension and Web Inspector closing
https://bugs.webkit.org/show_bug.cgi?id=233264
Summary
Web Inspector: fix IPC race between unregistering an extension and Web Inspec...
Blaze Burg
Reported
2021-11-17 11:17:23 PST
.
Attachments
Patch v1.0
(2.95 KB, patch)
2021-11-17 11:21 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch 1.0.1 (for landing)
(2.94 KB, patch)
2021-11-30 09:58 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2021-11-17 11:21:14 PST
Created
attachment 444540
[details]
Patch v1.0
Devin Rousso
Comment 2
2021-11-17 12:03:07 PST
Comment on
attachment 444540
[details]
Patch v1.0 View in context:
https://bugs.webkit.org/attachment.cgi?id=444540&action=review
r=me
> Source/WebKit/UIProcess/Inspector/WebInspectorUIExtensionControllerProxy.cpp:89 > + m_extensionAPIObjectMap.clear();
Style: add newline before
Radar WebKit Bug Importer
Comment 3
2021-11-17 16:51:11 PST
<
rdar://problem/85526823
>
Blaze Burg
Comment 4
2021-11-30 09:58:04 PST
Created
attachment 445430
[details]
Patch 1.0.1 (for landing)
EWS
Comment 5
2021-11-30 10:53:32 PST
Committed
r286306
(
244665@main
): <
https://commits.webkit.org/244665@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445430
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug