Web Inspector: fix IPC race between unregistering an extension and Web Inspector closing https://bugs.webkit.org/show_bug.cgi?id=233264

Reviewed by Devin Rousso.

* UIProcess/Inspector/WebInspectorUIExtensionControllerProxy.cpp:
(WebKit::WebInspectorUIExtensionControllerProxy::inspectorFrontendWillClose):
Remaining registrations will not be removed via unregisterExtension() if
the frontend is already in the midst of closing. Clear out the registry.

(WebKit::WebInspectorUIExtensionControllerProxy::registerExtension):
(WebKit::WebInspectorUIExtensionControllerProxy::unregisterExtension):
Bail out if the inspector has closed between the IPC message being sent
and receiving the async response.



Canonical link: https://commits.webkit.org/244665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286306 268f45cc-cd09-0410-ab3c-d52691b4dbfc