Source/WebKit/UIProcess/Inspector/WebInspectorUIExtensionControllerProxy.cpp
@@ -86,6 +86,8 @@ void WebInspectorUIExtensionControllerProxy::inspectorFrontendWillClose()
 
     m_inspectorPage->process().removeMessageReceiver(Messages::WebInspectorUIExtensionControllerProxy::messageReceiverName(), m_inspectorPage->webPageID());
     m_inspectorPage = nullptr;
+
+    m_extensionAPIObjectMap.clear();
 }
 
 // API
@@ -101,6 +103,11 @@ void WebInspectorUIExtensionControllerProxy::registerExtension(const Inspector::
         weakThis->m_inspectorPage->sendWithAsyncReply(Messages::WebInspectorUIExtensionController::RegisterExtension { extensionID, displayName }, [strongThis = Ref { *weakThis.get() }, extensionID, completionHandler = WTFMove(completionHandler)](Expected<void, Inspector::ExtensionError> result) mutable {
             if (!result) {
                 completionHandler(makeUnexpected(Inspector::ExtensionError::RegistrationFailed));
+                return;
+            }
+
+            if (!strongThis->m_inspectorPage) {
+                completionHandler(makeUnexpected(Inspector::ExtensionError::ContextDestroyed));
                 return;
             }
 
@@ -123,6 +130,11 @@ void WebInspectorUIExtensionControllerProxy::unregisterExtension(const Inspector
         weakThis->m_inspectorPage->sendWithAsyncReply(Messages::WebInspectorUIExtensionController::UnregisterExtension { extensionID }, [strongThis = Ref { *weakThis.get() }, extensionID, completionHandler = WTFMove(completionHandler)](Expected<void, Inspector::ExtensionError> result) mutable {
             if (!result) {
                 completionHandler(makeUnexpected(Inspector::ExtensionError::InvalidRequest));
+                return;
+            }
+
+            if (!strongThis->m_inspectorPage) {
+                completionHandler(makeUnexpected(Inspector::ExtensionError::ContextDestroyed));
                 return;
             }
 
